--- a/index.html
+++ b/index.html
@@ -39,28 +39,59 @@
             <h2>Visibilizamos todas las tasas de cambio.</h2>
             <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
         </div>
-        <section class="exchange__table">
-            <div>
-                <p>Monedas</p>
-                <div>
+        <section class="exchange__seccion--table">
+            <div class="exchange__table">
+                <p class="exchange__table__title">Monedas</p>
+                <div class="exchange__table__container">
                     <table>
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>$1.96</td>
+                            <td class="table__top_let">Bitcoin</td>
+                            <td class="table__right table--radius__top__right">$1.96 <span></span></td>
                         </tr>
                         <tr>
                             <td>Etherum</td>
-                            <td>$0.07</td>
+                            <td class="table__right">$0.07 <span class="arrow_up"></span></ td
                         </tr>
                         <tr>
                             <td>Ripple</td>
-                            <td>$2.15</td>
+                            <td class="table__right">$2.15 <span ></span></td>
                         </tr>
                         <tr>
-                            <td>Stellar</td>
-                            <td>$4.96</td>
+                            <td class="table__bottom_left"> Stellar</td>
+                            <td class="table__right table--radius__button__right">$4.96 <span class="arrow_up"></span></td>
                         </tr>
                     </table>
+                    <figure class="arrow__right"></figure>
+                    <div class="container--actualization">
+                        <p class="actualization"><b>Actualizado</b>: 19 Julio 23:45</p>
+                    </div>
+                </div>
+            </div>
+            <div class="exchange__table">
+                <p class="exchange__table__title exchange__table__title--blue">Comisiones</p>
+                <div class="exchange__table__container">
+                    <table>
+                        <tr>
+                            <td class="table__top_let">Bitrade</td>
+                            <td class="table__right table--radius__top__right">$ 12.96 <span></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bitpreco</td>
+                            <td class="table__right">$ 13.07 <span class="arrow_up"></span></ td
+                        </tr>
+                        <tr>
+                            <td>Novadax</td>
+                            <td class="table__right">$2.15 <span ></span></td>
+                        </tr>
+                        <tr>
+                            <td class="table__bottom_left">Coinext</td>
+                            <td class="table__right table--radius__button__right">$ 14.96 <span class="arrow_up"></span></td>
+                        </tr>
+                    </table>
+                    <figure class="arrow__left"></figure>
+                    <div class="container--actualization">
+                        <p class="actualization actualization--blue"><b>Actualizado</b>: 19 Julio 23:45</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -72,5 +103,7 @@
       <section></section>
     </main>
     <footer></footer>
+    <script src="./index.js"></script>
+   
   </body>
 </html>
