--- a/index.html
+++ b/index.html
@@ -145,17 +145,34 @@
             <h2 class="conocelo__title">Conócelo hoy.</h3>
           </figure>
           <div class="plan__container">
-            <div class="plan__container__text">
+            
+            
               <h2 class="plan__title">Escoge el plan que mejor se ajuste a ti.</h2>
               <p class="plan__parrafo">Cualquier plan te da acceso completo a <br>nuestra plataforma.</p>
             </div>
+           <section class="container_card">
+            <article class="card">
+              <span class="card-burbuja">Recomendado</span>
+              <h3 class="card_title">Pago Anual</h3>
+              <p class="card__precio"><span>$</span>5</p>
+              <p class="card__promocion">*Plan básico para menternete <br>informado</p>
+              <button class="card__button">Escoger este <span></span><img src="./asset/icon/arrow-right 1.svg" alt=""></button>
+            </article>
             <article class="card">
               <span class="card-burbuja">Recomendado</span>
               <h3 class="card_title">Pago Anual</h3>
               <p class="card__precio"><span>$</span>49</p>
-              <p class="card__promocion">*Ahorras $129 comparado al plan mensual.</p>
+              <p class="card__promocion">*Ahorras $129 comparado <br> al plan mensual.</p>
               <button class="card__button">Escoger este <span></span><img src="./asset/icon/arrow-right 1.svg" alt=""></button>
             </article>
+            <article class="card">
+              <span class="card-burbuja">Recomendado</span>
+              <h3 class="card_title">Pago Anual</h3>
+              <p class="card__precio"><span>$</span>99</p>
+              <p class="card__promocion">*Ahorras $999+ comparado con el plan anual</p>
+              <button class="card__button">Escoger este <span></span><img src="./asset/icon/arrow-right 1.svg" alt=""></button>
+            </article>
+           </section>
           </div>
         </div>
       </section>
