--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/table.css" media="(min-width:768px)">
+
+   
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/table.css" media="(min-width:768px)">
     <title>Document</title>
   </head>
   <body>
